--- a/RE FrameWork Acme Wi5/E5 FrameWork/Main.xaml
+++ b/RE FrameWork Acme Wi5/E5 FrameWork/Main.xaml
@@ -70,7 +70,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>847.333333333333,1494.66666666667</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1153.33333333333,1494.66666666667</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="36">
@@ -140,7 +140,6 @@
       <AssemblyReference>Newtonsoft.Json</AssemblyReference>
       <AssemblyReference>UiPath.Excel</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="Main" sap:VirtualizedContainerService.HintSize="648.666666666667,1430" sap2010:WorkflowViewState.IdRef="Sequence_5">
@@ -178,7 +177,7 @@
                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <If Condition="[String.IsNullOrWhiteSpace(ProcessName) Or&#xD;&#xA;String.IsNullOrWhiteSpace(TaskName) Or&#xD;&#xA;String.IsNullOrWhiteSpace(E5HookURL) Or&#xD;&#xA;String.IsNullOrWhiteSpace(E5HookCredentialAsset) Or&#xD;&#xA;String.IsNullOrWhiteSpace(ExceptionGmailAccountCredentialAsset) Or&#xD;&#xA;ExceptionEmailRecipients.Length = 0 Or&#xD;&#xA;String.IsNullOrWhiteSpace(NotificationGmailAcccountCredentialAsset) Or&#xD;&#xA;NotificationEmailRecipients.Length = 0]" DisplayName="Validate input arguments" sap:VirtualizedContainerService.HintSize="484,270" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[String.IsNullOrWhiteSpace(ProcessName) Or&#xA;String.IsNullOrWhiteSpace(TaskName) Or&#xA;String.IsNullOrWhiteSpace(E5HookURL) Or&#xA;String.IsNullOrWhiteSpace(E5HookCredentialAsset) Or&#xA;String.IsNullOrWhiteSpace(ExceptionGmailAccountCredentialAsset) Or&#xA;ExceptionEmailRecipients.Length = 0 Or&#xA;String.IsNullOrWhiteSpace(NotificationGmailAcccountCredentialAsset) Or&#xA;NotificationEmailRecipients.Length = 0]" DisplayName="Validate input arguments" sap:VirtualizedContainerService.HintSize="484,270" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
                 <ae:ThrowBusinessRuleException DisplayName="Throw business rule exception" sap:VirtualizedContainerService.HintSize="364,72" sap2010:WorkflowViewState.IdRef="ThrowBusinessRuleException_1" message="INVALID_INPUT_ARGUMENTS" />
               </If.Then>
@@ -232,21 +231,11 @@
             </sap:WorkflowViewStateService.ViewState>
             <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Execute the Process" sap:VirtualizedContainerService.HintSize="334,114" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_3" UnSafe="False" WorkflowFileName="E5 FrameWork\Process.xaml">
               <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="x:String" x:Key="WorkflowToExecute">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="WorkFlowToExecute" />
-                </InArgument>
-                <InArgument x:TypeArguments="scg:List(x:String)" x:Key="SummaryFieldNames">
-                  <mva:VisualBasicValue x:TypeArguments="scg:List(x:String)" ExpressionText="SummaryFieldNames" />
-                </InArgument>
-                <InOutArgument x:TypeArguments="ui:Browser" x:Key="ACMEBrowserTab">
-                  <mva:VisualBasicReference x:TypeArguments="ui:Browser" ExpressionText="AcmeBrowserTab" />
-                </InOutArgument>
-                <InArgument x:TypeArguments="njl:JObject" x:Key="JsonObject">
-                  <mva:VisualBasicValue x:TypeArguments="njl:JObject" ExpressionText="JsonObject" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="WorkFlowType">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="WorkFlowType" />
-                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="WorkflowToExecute">[WorkFlowToExecute]</InArgument>
+                <InArgument x:TypeArguments="scg:List(x:String)" x:Key="SummaryFieldNames">[SummaryFieldNames]</InArgument>
+                <InOutArgument x:TypeArguments="ui:Browser" x:Key="ACMEBrowserTab">[AcmeBrowserTab]</InOutArgument>
+                <InArgument x:TypeArguments="njl:JObject" x:Key="JsonObject">[JsonObject]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="WorkFlowType">[WorkFlowType]</InArgument>
               </ui:InvokeWorkflowFile.Arguments>
             </ui:InvokeWorkflowFile>
           </Sequence>
